# posit-connect-secrets-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yaml  release.yml
src/: app.rs  config.rs  error.rs  main.rs  vault.rs
src/api/: client.rs  types.rs
src/ui/: mod.rs  sidebar.rs  status_bar.rs  theme.rs
src/ui/pages/: env_var_list.rs  mod.rs  project_list.rs  settings.rs  vault.rs
