[package]
name = "posit-connect-secrets-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "posit-secrets"
path = "src/main.rs"

[dependencies]
ratatui      = "0.30.0"
crossterm    = { version = "0.28", features = ["event-stream"] }
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures      = "0.3"
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
anyhow       = "1"
thiserror    = "2"
dirs         = "5"
chrono       = { version = "0.4", features = ["serde"] }
indexmap     = { version = "2", features = ["serde"] }
tokio-util   = "0.7"
