[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "posit-connect-secrets-manager"
version = "0.3.0"
description = "TUI for managing Posit Connect environment variable secrets"
requires-python = ">=3.8"

[tool.maturin]
bindings = "bin"
strip = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
